<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    tools:context="ch.hevs.aislab.demo.ui.account.AccountDetailActivity">

    <TextView
        android:id="@+id/accBalanceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/account_balance"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <TextView
        android:id="@+id/accBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/balance"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/depositButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_deposit" />

    <Button
        android:id="@+id/withdrawButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_withdraw" />


</LinearLayout>