<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    tools:context="ch.hevs.aislab.demo.ui.transaction.TransactionActivity">


    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_from"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <Spinner
        android:id="@+id/spinner_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_to"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <Spinner
        android:id="@+id/spinner_toClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvToAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_acc"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <Spinner
        android:id="@+id/spinner_toAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/transaction_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/transaction_amount"
        android:textStyle="bold"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_accept" />
</LinearLayout>
